Refactor tooltip provider system
No longer depends on interfaces on an item